--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
  <p>They are symbol of struggle & trust.</p> 
  <h2>Gowrishankar</h2> 
  <p>They are symbol of patience & devotion.</p> 
+  <h2> LakshmiNarayan</h2>
+  <p> They are symbol of love & understanding</p>
  </div> 
 </body> 
 </html> 
+
